<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shoeName"
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/shoeName"
                android:textColor="#39CF3F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@{shoe.name}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shoeSize"
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/size"
                android:textColor="#39CF3F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@{@string/shoe_size(shoe.size)}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/company"
                android:textColor="#39CF3F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@{shoe.company}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/description"
                android:textColor="#39CF3F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@{shoe.description}"/>
        </LinearLayout>

    </LinearLayout>
</layout>