<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/emailText"
            android:layout_width="180dp"
            android:layout_height="34dp"
            android:layout_marginTop="168dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/Email"
            android:textColor="#3D8780"
            android:textColorHint="#4C857F"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/EditEmail"
            android:layout_width="391dp"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Email"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="190dp"
            android:layout_height="38dp"
            android:layout_marginTop="24dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/password"
            android:textColor="#3D8780"
            android:textColorHint="#4C857F"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditEmail" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="394dp"
            android:layout_height="59dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" />

        <Button
            android:id="@+id/login"
            android:layout_width="121dp"
            android:layout_height="52dp"
            android:text="@string/Login"
            android:theme="@style/LoginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password"
            app:layout_constraintVertical_bias="0.172" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>